unpackaged/objects/copado__JobExecution__c.object
<CustomObject>
	<description>A job execution is a representation of a job template execution at a given point in time.</description>
	<fields>
		<fullName>copado__Callback__c</fullName>
		<description>In this field, you can define an action to be executed once the function runs. This action must be an Apex class that implements copado.JobExecutionCallback interface.</description>
		<inlineHelpText>An apex class that must implement copado.JobExecutionCallback interface.</inlineHelpText>
		<label>Callback</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Commit__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Commit</label>
		<referenceTo>copado__Git_Commit__c</referenceTo>
		<relationshipLabel>Job Executions</relationshipLabel>
		<relationshipName>Job_Executions</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Context__c</fullName>
		<formula>IF(NOT(ISBLANK( copado__Deployment__c )), HYPERLINK(&quot;/&quot;+copado__Deployment__r.copado__Promotion__c, &quot;Promotion: &quot;+copado__Deployment__r.copado__Promotion__r.Name, &quot;_self&quot;),
    IF(NOT(ISBLANK( copado__Promotion__c )), HYPERLINK(&quot;/&quot;+copado__Promotion__c, &quot;Promotion: &quot;+copado__Promotion__r.Name, &quot;_self&quot;),
        IF(NOT(ISBLANK( copado__UserStoryCommit__c )), HYPERLINK(&quot;/&quot;+copado__UserStoryCommit__c, &quot;Commit: &quot;+copado__UserStoryCommit__r.Name, &quot;_self&quot;),
            IF(NOT(ISBLANK( copado__Snapshot__c )), HYPERLINK(&quot;/&quot;+copado__Snapshot__c, &quot;Git Snapshot: &quot;+copado__Snapshot__r.Name, &quot;_self&quot;),
                IF(NOT(ISBLANK( copado__ParentRecord_Id__c )), HYPERLINK(&quot;/&quot;+copado__ParentRecord_Id__c, &quot;Parent Record&quot;, &quot;_self&quot;), &quot;&quot;)
            )
        )
    )
)</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>Context</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__DataJson__c</fullName>
		<description>This field contains the test level for the Delete Metadata step.</description>
		<label>DataJson</label>
		<length>131072</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copado__Deployment__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<description>Deployment in Copado is the process of moving one or multiple changes from one environment to another, following a designated Pipeline.</description>
		<label>Deployment</label>
		<referenceTo>copado__Deployment__c</referenceTo>
		<relationshipLabel>Job Executions</relationshipLabel>
		<relationshipName>JobExecutions</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Destination__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<description>Name of the destination environment.</description>
		<label>Destination</label>
		<referenceTo>copado__Environment__c</referenceTo>
		<relationshipLabel>Job Executions (Destination)</relationshipLabel>
		<relationshipName>Job_Executions1</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__ErrorMessage__c</fullName>
		<description>Description of the error if the job has failed.</description>
		<label>Error Message</label>
		<length>32768</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copado__Job_Step__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Job Step</label>
		<referenceTo>copado__JobStep__c</referenceTo>
		<relationshipLabel>Job Executions</relationshipLabel>
		<relationshipName>Job_Executions</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__ParentId__c</fullName>
		<formula>IF(NOT(ISBLANK( copado__Deployment__c )), copado__Deployment__c, 
    IF(NOT(ISBLANK( copado__Promotion__c )), copado__Promotion__c, 
        IF(NOT(ISBLANK( copado__UserStoryCommit__c )), copado__UserStoryCommit__c, 
            IF(NOT(ISBLANK( copado__Snapshot__c )), copado__Snapshot__c,  copado__ParentRecord_Id__c)
        )
    )
)</formula>
		<label>Parent Id(Formula)</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__ParentRecord_Id__c</fullName>
		<description>Id of the parent record linked to the job execution such as, commit job template.</description>
		<label>Parent Id</label>
		<length>18</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Pipeline__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<description>Lookup field to the pipeline where this job execution applies.</description>
		<label>Pipeline</label>
		<referenceTo>copado__Deployment_Flow__c</referenceTo>
		<relationshipLabel>Job Executions</relationshipLabel>
		<relationshipName>JobExecutions</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Promotion__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<description>It is a container used to deploy one or multiple user stories from one environment to another following a designated pipeline.</description>
		<label>Promotion</label>
		<referenceTo>copado__Promotion__c</referenceTo>
		<relationshipLabel>Job Executions</relationshipLabel>
		<relationshipName>JobExecutions</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Snapshot__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<description>It is a full backup of the selected metadata types into a repository/branch.</description>
		<label>Snapshot</label>
		<referenceTo>copado__Git_Backup__c</referenceTo>
		<relationshipLabel>Job Executions</relationshipLabel>
		<relationshipName>Job_Executions</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Source__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<description>Name of the source environment.</description>
		<label>Source</label>
		<referenceTo>copado__Environment__c</referenceTo>
		<relationshipLabel>Job Executions</relationshipLabel>
		<relationshipName>Job_Executions</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Status__c</fullName>
		<description>It is the status of the job execution.</description>
		<label>Status</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>Not Started</fullName>
				</value>
				<value>
					<fullName>Canceled</fullName>
				</value>
				<value>
					<fullName>In Progress</fullName>
				</value>
				<value>
					<fullName>Successful</fullName>
				</value>
				<value>
					<fullName>Error</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Template__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<description>It is a reusable template with a list of steps that can be executed as part of different processes such as a commit, a promotion or a deployment.</description>
		<label>Template</label>
		<referenceTo>copado__JobTemplate__c</referenceTo>
		<relationshipLabel>Job Executions</relationshipLabel>
		<relationshipName>JobExecutions</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__UserStoryCommit__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<description>This field refers to the parent User Story Commit record of the job execution.</description>
		<inlineHelpText>This field relates to the parent User Story Commit record of the job execution</inlineHelpText>
		<label>User Story Commit</label>
		<referenceTo>copado__User_Story_Commit__c</referenceTo>
		<relationshipLabel>Job Executions</relationshipLabel>
		<relationshipName>JobExecutions</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__VolumeOptions__c</fullName>
		<description>In this field, you can introduce a list of JSON options with the configuration for the volumes used in every new job execution.</description>
		<label>VolumeOptions</label>
		<length>32768</length>
		<type>LongTextArea</type>
	</fields>
	<label>Job Execution</label>
	<listViews>
		<fullName>copado__All</fullName>
		<columns>NAME</columns>
		<columns>copado__Template__c</columns>
		<columns>copado__Status__c</columns>
		<columns>copado__Source__c</columns>
		<columns>copado__Destination__c</columns>
		<columns>copado__ErrorMessage__c</columns>
		<filterScope>Everything</filterScope>
		<label>All</label>
	</listViews>
	<nameField>
		<displayFormat>JE-{000}</displayFormat>
		<label>Job Execution Name</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>Job Executions</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>